# vcf-view

./: README-PYTHON.md  example.vcf  pyproject.toml
src/vcf_view/: __init__.py  properties.py  read_vcf.py  tui.py  vcard.py
