[project]
name = "vcf-view"
description = "Straightforward viewer for .vcf files"
authors = [
    {name = "Damy Metzke", email = "damy.metzke@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README-PYTHON.md"
license = {text = "GPL-3.0-or-later"}

dynamic=["version"]

[project.scripts]
vcf-view = "vcf_view.tui:run"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
